Update README.md
Updated README with a way to enable email capabilities